--- a/src/styles/Tickets.scss
+++ b/src/styles/Tickets.scss
@@ -15,9 +15,20 @@
   .p-completed {
     margin-bottom: 1.5rem;
   }
+  
   .ticket-timer{
-    color: white;
+   
+     -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: white;
+    color: transparent;
+    font-size: 2.5rem;
+    display: flex;
+    justify-content: start;
+    font-weight: 900;
+    margin-bottom: 1rem;
+    //margin-block: 30px;
   }
+  
   .order-complete {
     text-align: center;
     margin-bottom: 60px;
