--- a/src/styles/hamburger.scss
+++ b/src/styles/hamburger.scss
@@ -71,9 +71,9 @@ color: v.$color-purple-normal;
       margin-bottom: 0;
       padding-bottom: 0;
     }
-    /*   .menu-logo:hover {
+      .menu-logo:hover {
       color: v.$color-purple-normal;
-    } */
+    }
   }
 }
 .changeFont {
