--- a/src/styles/tickets-shop.scss
+++ b/src/styles/tickets-shop.scss
@@ -5,10 +5,11 @@ $breakpoint: 1060px;
 
 #tickets-shop {
   min-height: 70vh;
-  padding: 2rem 0px;
+  padding: 3rem 0px;
 
   h2 {
     text-align: center;
+    padding-top: 2rem;
   }
 
   #shop-wrapper {
