--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -105,3 +105,6 @@ a {
 .scroll-to-top:active {
   transform: matrix(0.95, 0, 0, 0.95, 0, 0);
 }
+.scroll-to-top p:hover{
+  color: v.$color-cyan-normal ;
+}
