--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,8 @@
 html {
   scroll-behavior: smooth;
   font-size: 1.125em;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif ;
+  
   overflow-x: hidden;
 }
 
@@ -21,6 +22,15 @@ body {
   width: 100vw;
 }
 
+  .tagline {
+    font-family: 'Aguafina Script', cursive !important;
+    font-size: clamp(1.44rem, 1.16rem + 1.118vw, 1.8rem);
+    word-spacing: 0.3rem;
+    color: white;
+    z-index: 2;
+    text-align: center;
+    text-shadow: 1px 1px 2px black;
+  }
 // fonts
 
 h1,
