--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -15,7 +15,7 @@
   padding: 2rem;
   position: relative;
   //padding-bottom: 5rem;
-/*   .tagline {
+  .tagline {
     font-family: 'Aguafina Script', cursive;
     font-size: clamp(1.44rem, 1.16rem + 1.118vw, 1.8rem);
     word-spacing: 0.3rem;
@@ -23,7 +23,7 @@
     z-index: 2;
     text-align: center;
     text-shadow: 1px 1px 2px black;
-  } */
+  }
   div {
     display: flex;
   }
