--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -2,7 +2,7 @@
 
 $color-black-dark: #04011a;
 $color-black-normal: #0e0826;
-$color-black-light: #20193f;
+$color-black-light: #241c46;
 $color-black-lighter: #1a123a;
 
 $color-white-normal: #f2f0f5;
