--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -4,6 +4,7 @@ $color-black-dark: #04011a;
 $color-black-normal: #0e0826;
 $color-black-light: #241c46;
 $color-black-lighter: #1a123a;
+$color-black-program: #180f3c;
 
 $color-white-normal: #f2f0f5;
 $color-white-dark: #e1dfe3;
