--- a/src/styles/Schedule.scss
+++ b/src/styles/Schedule.scss
@@ -65,7 +65,7 @@
       }
 
       .times:nth-child(odd) {
-        background-color: v.$color-black-program;
+        background-color: v.$color-black-normal;
         cursor: pointer;
         transition: background-color 0.15s;
 
