--- a/src/styles/Schedule.scss
+++ b/src/styles/Schedule.scss
@@ -49,9 +49,9 @@
         }
 
         .break {
-          color: v.$color-purple-light;
+          color: v.$color-purple-normal;
           + p {
-            color: v.$color-purple-light;
+            color: v.$color-purple-normal;
           }
         }
 
