--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -2,9 +2,9 @@
 
 $color-black-dark: #04011a;
 $color-black-normal: #0e0826;
-$color-black-light: #241c46;
+$color-black-light: #20193f;
 $color-black-lighter: #1a123a;
-$color-black-program: #180f3c;
+$color-white-program: #b8a8fb;
 
 $color-white-normal: #f2f0f5;
 $color-white-dark: #e1dfe3;
