--- a/src/styles/hamburger.scss
+++ b/src/styles/hamburger.scss
@@ -73,6 +73,8 @@ color: v.$color-purple-normal;
     }
       .menu-logo:hover {
       color: v.$color-purple-normal;
+       -webkit-text-stroke-width: 0px;
+      -webkit-text-stroke-color: transparent;
     }
   }
 }
